--- a/index.html
+++ b/index.html
@@ -1,19 +1,9 @@
-<!doctype html>
-
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-
-  <title>Get Ready</title>
-  <meta name="EtchNew" content="Something New">
- 
-
-
-
-</head>
-
+ <!DOCTYPE html>
+<html>
 <body>
-Hello Internet
- 
+
+<h1>EtchNew</h1>
+<p>ISP.</p>
+
 </body>
-</html>
+</html> 
