--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 	<div class="home">
 		<div class="background_image" style="background-image:url(images/index.jpg)"></div>
-		<div class="overlay"></div>	<div id="particles-js"></div>
+		<div class="overlay"></div>
 		<div class="home_container">
 			<div class="container">
 				<div class="row">
@@ -420,7 +420,6 @@
 				<!-- Blog Post -->
 				<div class="col-lg-4 blog_col">
 					<div class="blog_post">
-						
 						<div class="blog_post_image"><img src="images/icon_white.png" alt=""></div>
 						<div class="blog_post_title"><a href="#">Video: Pilates 4 Begginers</a></div>
 						<div class="blog_post_date"><a href="#">june 29, 2018</a></div>
@@ -480,7 +479,5 @@
 <script src="plugins/parallax-js-master/parallax.min.js"></script>
 <script src="plugins/colorbox/jquery.colorbox-min.js"></script>
 <script src="js/custom.js"></script>
-<script src="js/particles.js"></script>
-<script src="js/app.js"></script>
 </body>
 </html>
