Changed color scheme roughly

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 									</div>
 								</a>
 							</div>
-							<div class="home_title">Learn with us</div>
-							<div class="home_subtitle">LED Cube, Object Follower, Hollogram & many more</div>
+							<div class="home_title">EtchNew</div>
+							<div class="home_subtitle">Coming Soon </div>
 							<div class="button home_button ml-auto mr-auto"><a href="#">Join Now</a></div>
 						</div>
 					</div>
