--- a/blog.html
+++ b/blog.html
@@ -46,236 +46,70 @@
 
 	<!-- Hamburger -->
 	
-	<div class="hamburger_bar trans_400 d-flex flex-row align-items-center justify-content-start">
-		<div class="hamburger">
-			<div class="menu_toggle d-flex flex-row align-items-center justify-content-start">
-				<span>menu</span>
-				<div class="hamburger_container">
-					<div class="menu_hamburger">
-						<div class="line_1 hamburger_lines" style="transform: matrix(1, 0, 0, 1, 0, 0);"></div>
-						<div class="line_2 hamburger_lines" style="visibility: inherit; opacity: 1;"></div>
-						<div class="line_3 hamburger_lines" style="transform: matrix(1, 0, 0, 1, 0, 0);"></div>
-					</div>
-				</div>
-			</div>
+	<div class="container">
+
+		<!-- Full-width images with number text -->
+		<div class="mySlides">
+		  <div class="numbertext">1 / 6</div>
+			<img src="images/1.jpg" style="width:100%">
 		</div>
-	</div>
-
-	<!-- Menu -->
-
-	<div class="menu trans_800">
-		<div class="menu_content d-flex flex-column align-items-center justify-content-center text-center">
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About us</a></li>
-				<li><a href="services.html">Classes & Services</a></li>
-				<li><a href="blog.html">Blog</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
+	  
+		<div class="mySlides">
+		  <div class="numbertext">2 / 6</div>
+			<img src="images/2.jpg" style="width:100%">
 		</div>
-		<div class="menu_phone d-flex flex-row align-items-center justify-content-start">
-			<i class="fa fa-phone" aria-hidden="true"></i>
-				<span>652-345 3222 11</span>
+	  
+		<div class="mySlides">
+		  <div class="numbertext">3 / 6</div>
+			<img src="images/3.jpg" style="width:100%">
 		</div>
-	</div>
-
-	<!-- Home -->
-
-	<div class="home">
-		<div class="background_image" style="background-image:url(images/blog_page.jpg)"></div>
-		<div class="overlay"></div>
-		<div class="home_container">
-			<div class="container">
-				<div class="row">
-					<div class="col">
-						<div class="home_content">
-							<div class="home_title">Blog</div>
-							<div class="home_subtitle">Pilates, Yoga, Fitness, Spinning & many more</div>
-						</div>
-					</div>
-				</div>
-			</div>
+	  
+		<div class="mySlides">
+		  <div class="numbertext">4 / 6</div>
+			<img src="images/4.jpg" style="width:100%">
 		</div>
-	</div>
-
-	<!-- Blog -->
-
-	<div class="blog">
-		<div class="container">
-			<div class="row">
-				<div class="col">
-					<div class="section_title_container">
-						<div class="section_subtitle">welcome to sportfit</div>
-						<div class="section_title">The Blog</div>
-					</div>
-				</div>
-			</div>
-			<div class="row blog_row">
-				
-				<!-- Blog Post -->
-				<div class="col-xl-4 col-md-6 blog_col">
-					<div class="blog_post">
-						<div class="blog_post_image"><img src="images/blog_4.jpg" alt=""></div>
-						<div class="blog_post_title"><a href="#">Tips for the perfect body</a></div>
-						<div class="blog_post_date"><a href="#">june 29, 2018</a></div>
-						<div class="blog_post_text">
-							<p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit amet tellus blandit. Odio vestibulum est mattis effic iturut.</p>
-						</div>
-						<div class="blog_post_link"><a href="#">Read More</a></div>
-					</div>
-				</div>
-
-				<!-- Blog Post -->
-				<div class="col-xl-4 col-md-6 blog_col">
-					<div class="blog_post">
-						<div class="blog_post_image"><img src="images/blog_5.jpg" alt=""></div>
-						<div class="blog_post_title"><a href="#">Tips for the perfect body</a></div>
-						<div class="blog_post_date"><a href="#">june 29, 2018</a></div>
-						<div class="blog_post_text">
-							<p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit amet tellus blandit. Odio vestibulum est mattis effic iturut.</p>
-						</div>
-						<div class="blog_post_link"><a href="#">Read More</a></div>
-					</div>
-				</div>
-
-				<!-- Blog Post -->
-				<div class="col-xl-4 col-md-6 blog_col">
-					<div class="blog_post">
-						<div class="blog_post_image"><img src="images/blog_6.jpg" alt=""></div>
-						<div class="blog_post_title"><a href="#">Video: Pilates 4 Begginers</a></div>
-						<div class="blog_post_date"><a href="#">june 29, 2018</a></div>
-						<div class="blog_post_text">
-							<p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit amet tellus blandit. Odio vestibulum est mattis effic iturut.</p>
-						</div>
-						<div class="blog_post_link"><a href="#">Read More</a></div>
-					</div>
-				</div>
-
-				<!-- Blog Post -->
-				<div class="col-xl-4 col-md-6 blog_col">
-					<div class="blog_post">
-						<div class="blog_post_image"><img src="images/blog_7.jpg" alt=""></div>
-						<div class="blog_post_title"><a href="#">Summer food</a></div>
-						<div class="blog_post_date"><a href="#">june 29, 2018</a></div>
-						<div class="blog_post_text">
-							<p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit amet tellus blandit. Odio vestibulum est mattis effic iturut.</p>
-						</div>
-						<div class="blog_post_link"><a href="#">Read More</a></div>
-					</div>
-				</div>
-
-				<!-- Blog Post -->
-				<div class="col-xl-4 col-md-6 blog_col">
-					<div class="blog_post">
-						<div class="blog_post_image"><img src="images/blog_8.jpg" alt=""></div>
-						<div class="blog_post_title"><a href="#">Neck Exercise</a></div>
-						<div class="blog_post_date"><a href="#">june 29, 2018</a></div>
-						<div class="blog_post_text">
-							<p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit amet tellus blandit. Odio vestibulum est mattis effic iturut.</p>
-						</div>
-						<div class="blog_post_link"><a href="#">Read More</a></div>
-					</div>
-				</div>
-
-				<!-- Blog Post -->
-				<div class="col-xl-4 col-md-6 blog_col">
-					<div class="blog_post">
-						<div class="blog_post_image"><img src="images/blog_9.jpg" alt=""></div>
-						<div class="blog_post_title"><a href="#">Weight lifting tips</a></div>
-						<div class="blog_post_date"><a href="#">june 29, 2018</a></div>
-						<div class="blog_post_text">
-							<p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit amet tellus blandit. Odio vestibulum est mattis effic iturut.</p>
-						</div>
-						<div class="blog_post_link"><a href="#">Read More</a></div>
-					</div>
-				</div>
-
-				<!-- Blog Post -->
-				<div class="col-xl-4 col-md-6 blog_col">
-					<div class="blog_post">
-						<div class="blog_post_image"><img src="images/blog_10.jpg" alt=""></div>
-						<div class="blog_post_title"><a href="#">Yoga Classes</a></div>
-						<div class="blog_post_date"><a href="#">june 29, 2018</a></div>
-						<div class="blog_post_text">
-							<p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit amet tellus blandit. Odio vestibulum est mattis effic iturut.</p>
-						</div>
-						<div class="blog_post_link"><a href="#">Read More</a></div>
-					</div>
-				</div>
-
-				<!-- Blog Post -->
-				<div class="col-xl-4 col-md-6 blog_col">
-					<div class="blog_post">
-						<div class="blog_post_image"><img src="images/blog_11.jpg" alt=""></div>
-						<div class="blog_post_title"><a href="#">Tips for the perfect body</a></div>
-						<div class="blog_post_date"><a href="#">june 29, 2018</a></div>
-						<div class="blog_post_text">
-							<p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit amet tellus blandit. Odio vestibulum est mattis effic iturut.</p>
-						</div>
-						<div class="blog_post_link"><a href="#">Read More</a></div>
-					</div>
-				</div>
-
-				<!-- Blog Post -->
-				<div class="col-xl-4 col-md-6 blog_col">
-					<div class="blog_post">
-						<div class="blog_post_image"><img src="images/blog_12.jpg" alt=""></div>
-						<div class="blog_post_title"><a href="#">Video: Pilates 4 Begginers</a></div>
-						<div class="blog_post_date"><a href="#">june 29, 2018</a></div>
-						<div class="blog_post_text">
-							<p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit amet tellus blandit. Odio vestibulum est mattis effic iturut.</p>
-						</div>
-						<div class="blog_post_link"><a href="#">Read More</a></div>
-					</div>
-				</div>
-
-			</div>
-			<div class="row">
-				<div class="col">
-					<div class="button blog_button ml-auto mr-auto"><a href="#">Load More</a></div>
-				</div>
-			</div>
+	  
+		<div class="mySlides">
+		  <div class="numbertext">5 / 6</div>
+			<img src="images/5.jpg" style="width:100%">
 		</div>
-	</div>
-
-	<!-- Footer -->
-
-	<footer class="footer">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-8 offset-lg-2">
-					<div class="footer_container">
-						<div class="footer_content">
-							<div class="footer_logo">
-								<a href="#">
-									<div class="logo d-flex flex-row align-items-center justify-content-center"><img src="images/dot.png" alt=""><div>Sport<span>fit</span></div></div>
-								</a>
-							</div>
-							<nav class="footer_nav">
-								<ul class="d-flex flex-sm-row flex-column align-items-sm-start align-items-center justify-content-center">
-									<li><a href="index.html">Home</a></li>
-									<li><a href="about.html">About us</a></li>
-									<li><a href="services.html">Classes & Services</a></li>
-									<li><a href="blog.html">Blog</a></li>
-									<li><a href="contact.html">Contact</a></li>
-								</ul>
-							</nav>
-							<div class="newsletter_container">
-								<form action="#" id="newsletter_form" class="newsletter_form">
-									<input type="text" class="newsletter_input" placeholder="Enter your email here" required="required">
-									<button class="newsletter_button">go</button>
-								</form>
-							</div>
-							<div class="copyright d-flex flex-row align-items-start justify-content-sm-end justify-content-center"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
-						</div>
-						<div class="footer_image text-center"><img src="images/footer.png" alt=""></div>
-					</div>
-				</div>
-			</div>
+	  
+		<div class="mySlides">
+		  <div class="numbertext">6 / 6</div>
+			<img src="images/6.jpg" style="width:100%">
 		</div>
-	</footer>
+	  
+		<!-- Next and previous buttons -->
+		<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+		<a class="next" onclick="plusSlides(1)">&#10095;</a>
+	  
+		<!-- Image text -->
+		<div class="caption-container">
+		  <p id="caption"></p>
+		</div>
+	  
+		<!-- Thumbnail images -->
+		<div class="row">
+		  <div class="column">
+			<img class="demo cursor" src="images/1.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
+		  </div>
+		  <div class="column">
+			<img class="demo cursor" src="images/2.jpg" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
+		  </div>
+		  <div class="column">
+			<img class="demo cursor" src="images/3.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
+		  </div>
+		  <div class="column">
+			<img class="demo cursor" src="images/4.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+		  </div>
+		  <div class="column">
+			<img class="demo cursor" src="images/5.jpg" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
+		  </div>
+		  <div class="column">
+			<img class="demo cursor" src="images/6.jpg" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
+		  </div>
+		</div>
+	  </div>
 </div>
 
 <script src="js/jquery-3.2.1.min.js"></script>
