--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 				<div class="col">
 					<div class="header_content d-flex flex-row align-items-center justify-content-start trans_400">
 						<a href="#">
-							<div class="logo d-flex flex-row align-items-center justify-content-start"><img src="images/dot.png" alt=""><div>Sport<span>fit</span></div></div>
+							<div class="logo d-flex flex-row align-items-center justify-content-start"><img src="images/dot.png" alt=""><div>EtchNew<span>2020</span></div></div>
 						</a>
 						<nav class="main_nav">
 							<ul class="d-flex flex-row align-items-center justify-content-start">
@@ -47,232 +47,12 @@
 			</div>
 		</div>
 	</header>
-
-	<!-- Hamburger -->
 	
-	<div class="hamburger_bar trans_400 d-flex flex-row align-items-center justify-content-start">
-		<div class="hamburger">
-			<div class="menu_toggle d-flex flex-row align-items-center justify-content-start">
-				<span>menu</span>
-				<div class="hamburger_container">
-					<div class="menu_hamburger">
-						<div class="line_1 hamburger_lines" style="transform: matrix(1, 0, 0, 1, 0, 0);"></div>
-						<div class="line_2 hamburger_lines" style="visibility: inherit; opacity: 1;"></div>
-						<div class="line_3 hamburger_lines" style="transform: matrix(1, 0, 0, 1, 0, 0);"></div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<!-- Menu -->
-
-	<div class="menu trans_800">
-		<div class="menu_content d-flex flex-column align-items-center justify-content-center text-center">
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About us</a></li>
-				<li><a href="services.html">Classes & Services</a></li>
-				<li><a href="blog.html">Blog</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-		</div>
-		<div class="menu_phone d-flex flex-row align-items-center justify-content-start">
-			<i class="fa fa-phone" aria-hidden="true"></i>
-				<span>652-345 3222 11</span>
-		</div>
-	</div>
-
-	<!-- Home -->
-
-	<div class="home">
-		<div class="background_image" style="background-image:url(images/about_page.jpg)"></div>
-		<div class="overlay"></div>
-		<div class="home_container">
-			<div class="container">
-				<div class="row">
-					<div class="col">
-						<div class="home_content">
-							<div class="home_title">About us</div>
-							<div class="home_subtitle">Pilates, Yoga, Fitness, Spinning & many more</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<!-- About -->
-
-	<div class="about">
-		<div class="container about_container">
-			<div class="row">
-				<div class="col-lg-6">
-					<div class="about_content">
-						<div class="section_title_container">
-							<div class="section_subtitle">welcome to sportfit</div>
-							<div class="section_title">About <span>Sportfit</span></div>
-						</div>
-						<div class="text_highlight">Etiam commodo justo nec aliquam feugiat. Donec a leo eget eget augue porttitor sollicitudin augue porttitor sollicitudin.</div>
-						<div class="about_text">
-							<p>Morbi sed varius risus, vitae molestie lectus. Donec id hendrerit velit, eu fringilla neque. Etiam id finibus sapien. Donec sollicitudin luctus ex non pharetra. Aenean lobortis ut leo vel porta. Maecenas ac vestibulum lectus. Cras nulla urna, lacinia ut tempor facilisis, congue dignissim tellus. Maecenas ac vestibulum lectus. Cras nulla urna, lacinia ut tempor facilisis, congue dignissim tellus. Phasellus sit amet justo ullamcorper, elementum ipsum nec.</p>
-						</div>
-						<div class="button about_button"><a href="#">Join Now</a></div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="about_background">
-			<div class="about_image"><img src="images/a2.png" alt=""></div>
-		</div>
-	</div>
-
-	<!-- Team -->
-
-	<div class="team">
-		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="images/blog.jpg" data-speed="0.8"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6">
-					<div class="section_title_container">
-						<div class="section_subtitle">welcome to sportfit</div>
-						<div class="section_title">The Team</div>
-					</div>
-				</div>
-			</div>
-			<div class="row team_row">
-				
-				<!-- Team Member -->
-				<div class="col-lg-4 team_col">
-					<div class="team_item">
-						<div class="team_image"><img src="images/team_1.jpg" alt=""></div>
-						<div class="team_panel d-flex flex-column align-items-center justify-content-center text-center">
-							<div class="team_name"><a href="#">Michael Smith</a></div>
-							<div class="team_title">personal trainer</div>
-						</div>
-					</div>
-				</div>
-
-				<!-- Team Member -->
-				<div class="col-lg-4 team_col">
-					<div class="team_item">
-						<div class="team_image"><img src="images/team_2.jpg" alt=""></div>
-						<div class="team_panel d-flex flex-column align-items-center justify-content-center text-center">
-							<div class="team_name"><a href="#">Simone Parker</a></div>
-							<div class="team_title">personal trainer</div>
-						</div>
-					</div>
-				</div>
-
-				<!-- Team Member -->
-				<div class="col-lg-4 team_col">
-					<div class="team_item">
-						<div class="team_image"><img src="images/team_3.jpg" alt=""></div>
-						<div class="team_panel d-flex flex-column align-items-center justify-content-center text-center">
-							<div class="team_name"><a href="#">William James</a></div>
-							<div class="team_title">personal trainer</div>
-						</div>
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</div>
-
-	<!-- Skills -->
-
-	<div class="skills">
-		<div class="container">
-			<div class="row row-lg-eq-height">
-				
-				<!-- Extra -->
-				<div class="col-lg-6">
-					<div class="extra d-flex flex-column align-items-center justify-content-center text-center">
-						<div class="background_image" style="background-image:url(images/extra.jpg)"></div>
-						<div class="extra_title">15% Discount</div>
-						<div class="extra_text">
-							<p>Morbi sed varius risus, vitae molestie lectus. Donec id hendrerit velit, eu fringilla neque. Etiam id finibus sapien. Donec sollicitudin luctus ex non pharetra.llus.</p>
-						</div>
-						<div class="button extra_button"><a href="#">Join Now</a></div>
-					</div>
-				</div>
-
-				<!-- Skills -->
-				<div class="col-lg-6 skills_col">
-					<div class="skills_content">
-						<div class="section_title_container">
-							<div class="section_subtitle">welcome to sportfit</div>
-							<div class="section_title">We love sport</div>
-						</div>
-						<div class="skills_text">
-							<p>Morbi sed varius risus, vitae molestie lectus. Donec id hendrerit velit, eu fringilla neque. Etiam id finibus sapien. Donec sollicitudin luctus ex non pharetra. Aenean lobortis ut leo vel porta. Maecenas ac vestibulum lectus. Cras nulla urna, lacinia ut tempor facilisis, congue dignissim tellus. Maecenas ac vestibulum lectus. Cras nulla urna, lacinia ut tempor facilisis, congue dignissim tellus. Phasellus sit amet justo ullamcorper, elementum ipsum nec, vulputate neque.</p>
-						</div>
-
-						<!-- Progress Bars -->
-						<ul class="progress_bar_container col_12 clearfix">
-							<li class="pb_item">
-								<div id="skill_1_pbar" class="skill_bars" data-perc="1.00" data-name="skill_1_pbar"></div>
-								<h5>Fitness</h5>
-							</li>
-							<li class="pb_item">
-								<div id="skill_2_pbar" class="skill_bars" data-perc="0.70" data-name="skill_2_pbar"></div>
-								<h5>Pilates</h5>
-							</li>
-							<li class="pb_item">
-								<div id="skill_3_pbar" class="skill_bars" data-perc="0.85" data-name="skill_3_pbar"></div>
-								<h5>Yoga</h5>
-							</li>
-							<li class="pb_item">
-								<div id="skill_4_pbar" class="skill_bars" data-perc="0.95" data-name="skill_4_pbar"></div>
-								<h5>Aerobics</h5>
-							</li>
-						</ul>
-
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<!-- Footer -->
-
-	<footer class="footer">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-8 offset-lg-2">
-					<div class="footer_container">
-						<div class="footer_content">
-							<div class="footer_logo">
-								<a href="#">
-									<div class="logo d-flex flex-row align-items-center justify-content-center"><img src="images/dot.png" alt=""><div>Sport<span>fit</span></div></div>
-								</a>
-							</div>
-							<nav class="footer_nav">
-								<ul class="d-flex flex-sm-row flex-column align-items-sm-start align-items-center justify-content-center">
-									<li><a href="index.html">Home</a></li>
-									<li><a href="about.html">About us</a></li>
-									<li><a href="services.html">Classes & Services</a></li>
-									<li><a href="blog.html">Blog</a></li>
-									<li><a href="contact.html">Contact</a></li>
-								</ul>
-							</nav>
-							<div class="newsletter_container">
-								<form action="#" id="newsletter_form" class="newsletter_form">
-									<input type="text" class="newsletter_input" placeholder="Enter your email here" required="required">
-									<button class="newsletter_button">go</button>
-								</form>
-							</div>
-							<div class="copyright d-flex flex-row align-items-start justify-content-sm-end justify-content-center"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
-						</div>
-						<div class="footer_image text-center"><img src="images/footer.png" alt=""></div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</footer>
 </div>
+<h1 styles="position:fixed; bottom:0px;">
+	Page Under Construction!!!
+</h1>	
+
 
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="styles/bootstrap-4.1.2/popper.js"></script>
