--- a/EtchNew/index.html
+++ b/EtchNew/index.html
@@ -89,17 +89,16 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>About Me</h2>
+					<h2>About Us</h2>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-4">
 					<ul class="info">
-						<li><span class="first-block">Full Name:</span><span class="second-block">Etch New 2020</span></li>
 						<li><span class="first-block">Phone:</span><span class="second-block">+ 1235 2355 98</span></li>
-						<li><span class="first-block">Email:</span><span class="second-block">info@yoursite.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">www.yoursite.com</span></li>
-						<li><span class="first-block">Address:</span><span class="second-block">198 West 21th Street, Suite 721 New York NY 10016</span></li>
+						<li><span class="first-block">Email:</span><span class="second-block">info@etchnew.org</span></li>
+						<li><span class="first-block">Website:</span><span class="second-block">www.EtchNew.org</span></li>
+						<li><span class="first-block">Address:</span><span class="second-block">International School of Photonics, Cochin University, Kalamassery P O, Cochin </span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
@@ -614,15 +613,12 @@
 			</form>	
 		</div>
 	</div>
-
-	<div id="map" class="fh5co-map"></div>
-	</div>
 	
 	<div id="fh5co-footer">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p>&copy; 2017 Free HTML5 Template. All Rights Reserved. <br>Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a></p>
+					<p> &copy All Rights Reserved @ EtchNew</p>
 				</div>
 			</div>
 		</div>
