Logo landing Circle

--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
 							</div>
 							<div class="home_title" style="margin-left:-110px;">EtchNew</div>
                             <div id="loader" class="loader_on_pc">
+									<div class="circle1" style="-webkit-transform: rotate(30deg);-ms-transform: rotate(30deg); transform: rotate(30deg);"></div>
+									<div class="circle2" style="-webkit-transform: rotate(-30deg);-ms-transform: rotate(-30deg); transform: rotate(-30deg);"></div>
 
                                 <div class="line_main"></div>
 
