Video Link Temp

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					<div class="col">
 						<div class="home_content text-center">
 							<div class="video_link">
-								<a class="vimeo video_button d-flex flex-column align-items-center justify-content-center" href="https://player.vimeo.com/video/99340873?autoplay=1&loop=1&title=0&autopause=0">
+								<a class="vimeo video_button d-flex flex-column align-items-center justify-content-center" href="https://www.youtube.com/embed/fc03NgxSUx0">
 									<div class="video_link_content d-flex flex-row align-items-center justify-content-start">
 										<div class="video_icon d-flex flex-column align-items-center justify-content-center"><i class="fa fa-play" aria-hidden="true"></i></div>
 										<span class="video_text">See Promo Video</span>
@@ -519,7 +519,7 @@
 		  // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
 		  $('html, body').animate({
 			scrollTop: $(hash).offset().top
-		  }, 800, function(){
+		  }, 1200, function(){
 	
 			// Add hash (#) to URL when done scrolling (default click behavior)
 			window.location.hash = hash;
