--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<div class="col">
 					<div class="header_content d-flex flex-row align-items-center justify-content-start trans_400">
 						<a href="#">
-							<div class="logo d-flex flex-row align-items-center justify-content-start"><img src="images/icon_white.png"><div>EtchNew<span>2020</span></div></div>
+							<div class="logo d-flex flex-row align-items-center justify-content-start"><img src="images/icon_white.png"><div><span style="color:red">Etch</span>New<span>2020</span></div></div>
 						</a>
 						<nav class="main_nav">
 							<ul class="d-flex flex-row align-items-center justify-content-start">
@@ -404,7 +404,7 @@
 					<div class=" d-flex flex-row align-items-start justify-content-start">
 						<div class="section_title_container">
 							<div class="section_subtitle" style="color:#ce51a9;">Etchnew 2020</div>
-							<div class="section_title">The Blog</div>
+							<div class="section_title">Contact</div>
 						</div>
 						<div class="all_posts_link ml-auto"><a href="#">View all blog posts</a></div>
 					</div>
