Basic Form added

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                 <div class="line_short" style="-webkit-transform: rotate(165deg);-ms-transform: rotate(165deg); transform: rotate(165deg);"></div>
                             </div>
 							<div class="home_subtitle">Coming Soon </div>
-							<div class="button home_button ml-auto mr-auto"><a href="#">Join Now</a></div>
+							<div class="button home_button ml-auto mr-auto"><a href="https://forms.gle/yrL5znbNS16dKqVj6" target="_blank">Join Now</a></div>
 						</div>
 					</div>
 				</div>
@@ -191,7 +191,7 @@
 						<div class="about_text">
 							<p>Morbi sed varius risus, vitae molestie lectus. Donec id hendrerit velit, eu fringilla neque. Etiam id finibus sapien. Donec sollicitudin luctus ex non pharetra. Aenean lobortis ut leo vel porta. Maecenas ac vestibulum lectus. Cras nulla urna, lacinia ut tempor facilisis, congue dignissim tellus. Maecenas ac vestibulum lectus. Cras nulla urna, lacinia ut tempor facilisis, congue dignissim tellus. Phasellus sit amet justo ullamcorper, elementum ipsum nec.</p>
 						</div>
-						<div class="button about_button"><a href="#">Join Now</a></div>
+						<div class="button about_button"><a href="#https://forms.gle/yrL5znbNS16dKqVj6" target="_blank">Join Now</a></div>
 					</div>
 				</div>
 			</div>
@@ -264,7 +264,7 @@
 			</div>
 			<div class="row test_button_row">
 				<div class="col text-center">
-					<div class="button test_button"><a href="#">Join Now</a></div>
+					<div class="button test_button"><a href="#https://forms.gle/yrL5znbNS16dKqVj6" target="_blank">Join Now</a></div>
 				</div>
 			</div>
 		</div>
