Colour Changes; Just take a look at the alternate Page. The theme fits perfectly there.
I've changed the Whole 'Etch' to Etch in red. Needs some changes becs I changed it in the assumption that the font colour is either black/white.

--- a/EtchNew/index.html
+++ b/EtchNew/index.html
@@ -36,7 +36,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
-	<link href="images/user-3.png" rel="icon"/>
+	<link href="images/drawing.svg" rel="icon"/>
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -67,8 +67,8 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<div class="profile-thumb" style="background: url(images/user-3.png);"></div>
-							<h1>Etch New 2020</h1>
+							<div class="profile-thumb" style="background: url(images/drawing.svg);"></div>
+							<h1><span><span style="color:red">Etch</span>New 2020</h1>
 							<h3><span>Web Developer / Photographer</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
@@ -96,8 +96,8 @@
 				<div class="col-md-4">
 					<ul class="info">
 						<li><span class="first-block">Phone:</span><span class="second-block">+ 1235 2355 98</span></li>
-						<li><span class="first-block">Email:</span><span class="second-block">info@etchnew.org</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">www.EtchNew.org</span></li>
+						<li><span class="first-block">Email:</span><span class="second-block">info@<span><span style="color:red">Etch</span>New</span>.org</span></li>
+						<li><span class="first-block">Website:</span><span class="second-block">www.<span><span style="color:red">Etch</span>New</span>.org</span></li>
 						<li><span class="first-block">Address:</span><span class="second-block">International School of Photonics, Cochin University, Kalamassery P O, Cochin </span></li>
 					</ul>
 				</div>
@@ -618,7 +618,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p> &copy All Rights Reserved @ EtchNew</p>
+					<p> &copy All Rights Reserved @ <span><span style="color:red">Etch</span>New</span></p>
 				</div>
 			</div>
 		</div>
