--- a/EtchNew/index.html
+++ b/EtchNew/index.html
@@ -69,7 +69,7 @@
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/drawing.svg);"></div>
 							<h1><span><span style="color:red">Etch</span>New 2020</h1>
-							<h3><span>Web Developer / Photographer</span></h3>
+							<h3><span>Lets embrace the future of Light together!</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="#"><i class="icon-twitter2"></i></a></li>
