--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 								<li class="active"><a href="#home">Home</a></li>
 								<li><a href="#about">About us</a></li>
 								<li><a href="#Testimonials">Testimonials</a></li>
-								<li><a href="blog.html">Blog</a></li>
-								<li><a href="contact.html">Contact</a></li>
+								<li><a href="#Spotlight">Spot Light</a></li>
+								<li><a href="#Contact">Contact</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -72,8 +72,8 @@
 				<li><a href="#home">Home</a></li>
 				<li><a href="#about">About us</a></li>
 				<li><a href="#Testimonials">Testimonials</a></li>
-				<li><a href="blog.html">Blog</a></li>
-				<li><a href="contact.html">Contact</a></li>
+				<li><a href="#Spotlight">Spot Light</a></li>
+				<li><a href="#contact">Contact</a></li>
 			</ul>
 		</div>
 	</div>
@@ -181,9 +181,9 @@
 							<div class="section_subtitle"><span style="color:red">Etch</span>New 2020</div>
 							<div class="section_title">About <span><span style="color:red">Etch</span>New</span></div>
 						</div>
-						<div class="text_highlight">Etiam commodo justo nec aliquam feugiat. Donec a leo eget eget augue porttitor sollicitudin augue porttitor sollicitudin.</div>
+						<div class="text_highlight">Conjured with the mastery of light with a clear sight for the future to create a youth with a deep understanding of fundamental, we bring you EtchNew2020.</div>
 						<div class="about_text">
-							<p>Morbi sed varius risus, vitae molestie lectus. Donec id hendrerit velit, eu fringilla neque. Etiam id finibus sapien. Donec sollicitudin luctus ex non pharetra. Aenean lobortis ut leo vel porta. Maecenas ac vestibulum lectus. Cras nulla urna, lacinia ut tempor facilisis, congue dignissim tellus. Maecenas ac vestibulum lectus. Cras nulla urna, lacinia ut tempor facilisis, congue dignissim tellus. Phasellus sit amet justo ullamcorper, elementum ipsum nec.</p>
+							<p>Everything, from the distant stars to the fireflies at night, signifies the mastery of light. Set in the backdrop of various disciplines of physical science, the annual optics fest EtchNew2020 brings together both the fundamental and advanced concepts and applications of photonics. Join us in the journey to embark on the advent, development, and future of light.</p>
 						</div>
 						<div class="button about_button"><a href="#https://forms.gle/yrL5znbNS16dKqVj6" target="_blank">Join Now</a></div>
 					</div>
@@ -217,12 +217,12 @@
 					<div class="test test_1 d-flex flex-row align-items-start justify-content-start">
 						<div><div class="test_image"><img src="images/icon_white.png"></div></div>
 						<div class="test_content">
-							<div class="test_name"><a href="#">Diane Smith</a></div>
-							<div class="test_title">client</div>
+							<div class="test_name"><a href="#">Arjun Gopakumar</a></div>
+							<div class="test_title">Student</div>
 							<div class="test_text">
-								<p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit amet tellus blandit. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mat tis effic iturut magna.</p>
+								<p>The best educational and fun session I had this year. I learned a lot of new things and had a better understanding of my subjects.</p>
 							</div>
-							<div class="rating rating_4 test_rating"><i></i><i></i><i></i><i></i><i></i></div>
+							<div class="rating rating_5 test_rating"><i></i><i></i><i></i><i></i><i></i></div>
 						</div>
 					</div>
 				</div>
@@ -232,12 +232,12 @@
 					<div class="test d-flex flex-row align-items-start justify-content-start">
 						<div><div class="test_image"><img src="images/icon_white.png" alt=""></div></div>
 						<div class="test_content">
-							<div class="test_name"><a href="#">Diane Smith</a></div>
-							<div class="test_title">client</div>
+							<div class="test_name"><a href="#">Savithri</a></div>
+							<div class="test_title">Teacher</div>
 							<div class="test_text">
-								<p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit amet tellus blandit. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mat tis effic iturut magna.</p>
+								<p>This is, without a doubt, the best place for students to come to widen their knowledge while making it fun to learn. I also had fun and was happy to see my students taking a keen interest in science.</p>
 							</div>
-							<div class="rating rating_4 test_rating"><i></i><i></i><i></i><i></i><i></i></div>
+							<div class="rating rating_5 test_rating"><i></i><i></i><i></i><i></i><i></i></div>
 						</div>
 					</div>
 
@@ -245,12 +245,12 @@
 					<div class="test d-flex flex-row align-items-start justify-content-start">
 						<div><div class="test_image"><img src="images/icon_white.png" alt=""></div></div>
 						<div class="test_content">
-							<div class="test_name"><a href="#">Diane Smith</a></div>
-							<div class="test_title">client</div>
+							<div class="test_name"><a href="#">Govind</a></div>
+							<div class="test_title">Student</div>
 							<div class="test_text">
-								<p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit amet tellus blandit. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mat tis effic iturut magna.</p>
+								<p>Never knew light had so many different uses, and was this beautiful. This was an eye-opening and rewarding experience for me. I definitely want to learn more about lasers and their amazing properties. </p>
 							</div>
-							<div class="rating rating_4 test_rating"><i></i><i></i><i></i><i></i><i></i></div>
+							<div class="rating rating_5 test_rating"><i></i><i></i><i></i><i></i><i></i></div>
 						</div>
 					</div>
 
@@ -293,13 +293,13 @@
 
 	<!-- Services -->
 
-	<div class="services">
+	<div class="services" id="Spotlight">
 		<div class="container">
 			<div class="row">
 				<div class="col">
 					<div class="section_title_container">
 						<div class="section_subtitle"><span style="color:red">Etch</span>New 2020</div>
-						<div class="section_title">Our Courses</div>
+						<div class="section_title">Spot Light</div>
 					</div>
 				</div>
 			</div>
@@ -310,7 +310,7 @@
 					<div class="service">
 						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
 							<div><div class="service_icon"><img src="images/icon_black.png" alt=""></div></div>
-							<div class="service_title">Weight Loss Class</div>
+							<div class="service_title">Seminar</div>
 						</div>
 						<div class="service_text">
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum.</p>
@@ -323,7 +323,7 @@
 					<div class="service">
 						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
 							<div><div class="service_icon"><img src="images/icon_black.png" alt=""></div></div>
-							<div class="service_title">Yoga Classes</div>
+							<div class="service_title">Quiz</div>
 						</div>
 						<div class="service_text">
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum.</p>
@@ -336,7 +336,7 @@
 					<div class="service">
 						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
 							<div><div class="service_icon"><img src="images/icon_black.png" alt=""></div></div>
-							<div class="service_title">Spinning Class</div>
+							<div class="service_title">Experiment Demonstration</div>
 						</div>
 						<div class="service_text">
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum.</p>
@@ -349,7 +349,7 @@
 					<div class="service">
 						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
 							<div><div class="service_icon"><img src="images/icon_black.png" alt=""></div></div>
-							<div class="service_title">Private Fit Class</div>
+							<div class="service_title">Games</div>
 						</div>
 						<div class="service_text">
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum.</p>
@@ -362,7 +362,7 @@
 					<div class="service">
 						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
 							<div><div class="service_icon"><img src="images/icon_black.png" alt=""></div></div>
-							<div class="service_title">Nutrition Classes</div>
+							<div class="service_title">Live Interaction</div>
 						</div>
 						<div class="service_text">
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum.</p>
@@ -375,7 +375,7 @@
 					<div class="service">
 						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
 							<div><div class="service_icon"><img src="images/icon_black.png" alt=""></div></div>
-							<div class="service_title">Pillates Class</div>
+							<div class="service_title">and More!</div>
 						</div>
 						<div class="service_text">
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum.</p>
@@ -389,7 +389,7 @@
 
 	<!-- Blog -->
 
-	<div class="blog">
+	<div class="blog" id="Contact">
 		<div class="blog_overlay"></div>
 		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="images/EPIC.png" data-speed="0.1"></div>
 		<div class="container">
@@ -400,7 +400,7 @@
 							<div class="section_subtitle" style="color:#ce51a9;"><span style="color:red">Etch</span>New 2020</div>
 							<div class="section_title">Contact</div>
 						</div>
-						<div class="all_posts_link ml-auto"><a href="#">View all blog posts</a></div>
+						<!-- <div class="all_posts_link ml-auto"><a href="#">View all blog posts</a></div> -->
 					</div>
 				</div>
 			</div>
@@ -410,12 +410,12 @@
 				<div class="col-lg-4 blog_col">
 					<div class="blog_post">
 						<div class="blog_post_image"><img src="images/icon_white.png" alt=""></div>
-						<div class="blog_post_title"><a href="#">Tips for the perfect body</a></div>
-						<div class="blog_post_date"><a href="#">june 29, 2018</a></div>
+						<div class="blog_post_title"><a href="#">Where To Find Us</a></div>
+						<div class="blog_post_date"><a href="#"></a></div>
 						<div class="blog_post_text">
 							<p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit amet tellus blandit. Odio vestibulum est mattis effic iturut.</p>
 						</div>
-						<div class="blog_post_link"><a href="#">Read More</a></div>
+						<div class="blog_post_link"><a href="#"></a></div>
 					</div>
 				</div>
 
@@ -423,12 +423,12 @@
 				<div class="col-lg-4 blog_col">
 					<div class="blog_post">
 						<div class="blog_post_image"><img src="images/icon_white.png" alt=""></div>
-						<div class="blog_post_title"><a href="#">Tips for the perfect body</a></div>
-						<div class="blog_post_date"><a href="#">june 29, 2018</a></div>
+						<div class="blog_post_title"><a href="#">Follow Us On</a></div>
+						<div class="blog_post_date"><a href="#"></a></div>
 						<div class="blog_post_text">
 							<p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit amet tellus blandit. Odio vestibulum est mattis effic iturut.</p>
 						</div>
-						<div class="blog_post_link"><a href="#">Read More</a></div>
+						<div class="blog_post_link"><a href="#"></a></div>
 					</div>
 				</div>
 
@@ -436,12 +436,12 @@
 				<div class="col-lg-4 blog_col">
 					<div class="blog_post">
 						<div class="blog_post_image"><img src="images/icon_white.png" alt=""></div>
-						<div class="blog_post_title"><a href="#">Video: Pilates 4 Begginers</a></div>
-						<div class="blog_post_date"><a href="#">june 29, 2018</a></div>
+						<div class="blog_post_title"><a href="#">Reach Us On</a></div>
+						<div class="blog_post_date"><a href="#"></a></div>
 						<div class="blog_post_text">
 							<p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit amet tellus blandit. Odio vestibulum est mattis effic iturut.</p>
 						</div>
-						<div class="blog_post_link"><a href="#">Read More</a></div>
+						<div class="blog_post_link"><a href="#"></a></div>
 					</div>
 				</div>
 
