--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 						<div class="blog_post_title"><a href="#">Follow Us On</a></div>
 						<div class="blog_post_date"><a href="#"></a></div>
 						<div class="blog_post_text">
-							<p>Insta<br>Youtube<br>facebook</p>
+							<p><a href="www.instagram.com/phot0nianz" class="fa fa-instagram"  style="font-size:24px"></a><br><i class="fa fa-youtube" href="https://www.youtube.com/channel/UCBC4TnbSR3-t-iupWb-RmAQ" style="font-size:24px"></i>  <br><i class="fa fa-facebook" href="\EtchNew\index.html" style="font-size:24px"></i></p>
 							<!-- Update Block -->
 						</div>
 						<div class="blog_post_link"><a href="#"></a></div>
