--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 							<div class="service_title">Experiment Demonstration</div>
 						</div>
 						<div class="service_text">
-							<p>WIth a wide variey of experiment demonstrated infront of you this a perfect oppurtunity to observe and Learn</p>
+							<p>WIth a wide variey of experiment demonstrated infront of you this a perfect opportunity to observe and Learn</p>
 						</div>
 					</div>
 				</div>
@@ -365,7 +365,7 @@
 							<div class="service_title">Live Interaction</div>
 						</div>
 						<div class="service_text">
-							<p>Interact with experts in the field and make use of this oppurtunity to have all your questions asked</p>
+							<p>Interact with experts in the field and make use of this opportunity to have all your questions asked</p>
 						</div>
 					</div>
 				</div>
