--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 					</div>
 
 					<!-- Testimonial -->
-					<div class="test test_1 d-flex flex-row align-items-start justify-content-start">
+					<div class="test test_1 d-flex flex-row pop align-items-start justify-content-start">
 						<div><div class="test_image"><img src="images/icon_white.png"></div></div>
 						<div class="test_content">
 							<div class="test_name"><a href="#">Arjun Gopakumar</a></div>
@@ -229,7 +229,7 @@
 				<div class="col-lg-6">
 					
 					<!-- Testimonial -->
-					<div class="test d-flex flex-row align-items-start justify-content-start">
+					<div class="test d-flex flex-row pop align-items-start justify-content-start">
 						<div><div class="test_image"><img src="images/icon_white.png" alt=""></div></div>
 						<div class="test_content">
 							<div class="test_name"><a href="#">Savithri</a></div>
@@ -242,7 +242,7 @@
 					</div>
 
 					<!-- Testimonial -->
-					<div class="test d-flex flex-row align-items-start justify-content-start">
+					<div class="test d-flex flex-row pop align-items-start justify-content-start">
 						<div><div class="test_image"><img src="images/icon_white.png" alt=""></div></div>
 						<div class="test_content">
 							<div class="test_name"><a href="#">Govind</a></div>
