--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 						<div class="blog_post_title"><a href="#">Follow Us On</a></div>
 						<div class="blog_post_date"><a href="#"></a></div>
 						<div class="blog_post_text">
-							<p><a href="www.instagram.com/phot0nianz" class="fa fa-instagram"  style="font-size:24px"></a><br><i class="fa fa-youtube" href="https://www.youtube.com/channel/UCBC4TnbSR3-t-iupWb-RmAQ" style="font-size:24px"></i>  <br><i class="fa fa-facebook" href="\EtchNew\index.html" style="font-size:24px"></i></p>
+							<p><a href="https://www.instagram.com/etchnew"><i  class="fa fa-instagram"  style="font-size:24px"></i>  &nbsp &nbsp Instagram</a><br><br/><a href="https://www.youtube.com/channel/UCBC4TnbSR3-t-iupWb-RmAQ"><i class="fa fa-youtube"  style="font-size:24px"></i>  &nbsp &nbsp YouTube</a> <br><br/><a href="EtchNew/index.html"><i class="fa fa-facebook"  style="font-size:24px"></i>    &nbsp  &nbsp &nbsp Facebook</a></p>
 							<!-- Update Block -->
 						</div>
 						<div class="blog_post_link"><a href="#"></a></div>
