--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 				<div class="owl-item"><img src="images/gallery_1.jpeg" alt=""></div>
 
 				<!-- Slide -->
-				<div class="owl-item"><img src="images/gallery_2.jpg" alt=""></div>
+				<div class="owl-item"><img src="images/gallery_2.jpeg" alt=""></div>
 
 			</div>
 		</div>
@@ -412,7 +412,7 @@
 						<div class="blog_post_title"><a href="#">Where To Find Us</a></div>
 						<div class="blog_post_date"><a href="#"></a></div>
 						<div class="blog_post_text">
-							<p> International School Of Photonics <br> Cochin University of Science and Technology<br>University Road, South Kalamassery, Kalamassery, Ernakulam, Kerala 682022</p>
+							<p> <b>International School Of Photonics </b><br> Cochin University of Science and Technology<br>University Road, South Kalamassery, Kalamassery, Ernakulam, Kerala 682022</p>
 						</div>
 						<div class="blog_post_link"><a href="#"></a></div>
 					</div>
@@ -439,7 +439,7 @@
 						<div class="blog_post_title"><a href="#">Reach Us On</a></div>
 						<div class="blog_post_date"><a href="#"></a></div>
 						<div class="blog_post_text">
-							<p><a href="tel:+91628241549">Abhiram - +91628241549 </a><br><a href="tel:+919645735303">Ajmal - +919645735303</a><br><a href="mailto:etchnew2020@gmail.com">etchnew2020@gmail.com</a></p>
+							<p><a href="tel:+91628241549"><b>Abhiram - +91628241549 </b></a><br><a href="tel:+919645735303"><b>Ajmal - +919645735303</b></a><br><a href="mailto:etchnew2020@gmail.com">etchnew2020@gmail.com</a></p>
 							<!-- Update Block -->
 
 						</div>
