--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 						</div>
 						<div class="blog_post_link"><a href="#"></a></div>
 					</div>
-				</div>
+				</div>	
 
 				<!-- Blog Post -->
 				<div class="col-lg-4 blog_col">
@@ -425,7 +425,7 @@
 						<div class="blog_post_title"><a href="#">Follow Us On</a></div>
 						<div class="blog_post_date"><a href="#"></a></div>
 						<div class="blog_post_text">
-							<p><a href="https://www.instagram.com/etchnew"><i  class="fa fa-instagram"  style="font-size:24px"></i>  &nbsp &nbsp Instagram</a><br><br/><a href="https://www.youtube.com/channel/UCBC4TnbSR3-t-iupWb-RmAQ"><i class="fa fa-youtube"  style="font-size:24px"></i>  &nbsp &nbsp YouTube</a> <br><br/><a href="EtchNew/index.html"><i class="fa fa-facebook"  style="font-size:24px"></i>    &nbsp  &nbsp &nbsp Facebook</a></p>
+							<p><a class="lol" href="https://www.instagram.com/etchnew"><i  class="fa fa-instagram"  style="font-size:24px"></i>  &nbsp &nbsp Instagram</a><br><br><a class="lol" href="https://www.youtube.com/channel/UCBC4TnbSR3-t-iupWb-RmAQ"><i class="fa fa-youtube"  style="font-size:24px"></i>  &nbsp &nbsp YouTube</a> <br><br><a class="lol" href="EtchNew/index.html"><i class="fa fa-facebook"  style="font-size:24px"></i>    &nbsp  &nbsp &nbsp Facebook</a></p>
 							<!-- Update Block -->
 						</div>
 						<div class="blog_post_link"><a href="#"></a></div>
