Js update Custom removed elements from index-fixed mobile veiw menu

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
 <script src="js/custom.js"></script>
 <script src="js/particles.js"></script>
 <script src="js/app.js"></script>
-<script src="js/elements.js"></script>
+<!-- <script src="js/elements.js"></script> -->
 <script>
 	$(document).ready(function(){
 	  // Add smooth scrolling to all links
