--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
 <link rel="stylesheet" type="text/css" href="styles/responsive.css">
 </head>
 <body>
+	<!-- Preloader -->
+	<div class="preloader">
+		<div class="loading">
+		  <img class="pre-img" src="images/icon_black.png">
+		</div>
+	  </div>
 
+	  <!-- ******* -->
 <div class="super_container">
 	
 	<!-- Header -->
