--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<!-- Preloader -->
 	<div class="preloader">
 		<div class="loading">
-		  <img class="pre-img" src="images/icon_black.png">
+		  <img class="pre-img" src="images/icon_white.png">
 		</div>
 	  </div>
 
