Messy addition fade testrimonial

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 					<!-- Testimonial -->
 					<div class="test d-flex flex-row pop align-items-start justify-content-start">
 						<div
-						data-aos="fade-down"
+						data-aos="fade-up"
 						data-aos-offset="10"
 						data-aos-delay="25"
 						data-aos-duration="1000"
@@ -272,7 +272,7 @@
 					<!-- Testimonial -->
 					<div class="test d-flex flex-row pop align-items-start justify-content-start">
 						<div
-						data-aos="fade-up"
+						data-aos="fade-left"
 						data-aos-offset="0"
 						data-aos-delay="50"
 						data-aos-duration="1000"
