Chaged anchor testrimonial

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 						data-aos-easing="ease-in-out"
 						data-aos-mirror="true"
 						data-aos-once="false"
-						data-aos-anchor-placement="top-center"
+						data-aos-anchor-placement="bottom-bottom"
 					  ><div><div class="test_image"><img src="images/icon_white.png"></div></div>
 						<div class="test_content">
 							<div class="test_name"><a href="#">Arjun Gopakumar</a></div>
@@ -256,7 +256,7 @@
 						data-aos-easing="ease-in-out"
 						data-aos-mirror="true"
 						data-aos-once="false"
-						data-aos-anchor-placement="top-center"
+						data-aos-anchor-placement="bottom-bottom"
 					  ><div><div class="test_image"><img src="images/icon_white.png" alt=""></div></div>
 						<div class="test_content">
 							<div class="test_name"><a href="#">Savithri</a></div>
@@ -279,7 +279,7 @@
 						data-aos-easing="ease-in-out"
 						data-aos-mirror="true"
 						data-aos-once="false"
-						data-aos-anchor-placement="top-center"
+						data-aos-anchor-placement="bottom-bottom"
 					  ><div><div class="test_image"><img src="images/icon_white.png" alt=""></div></div>
 						<div class="test_content">
 							<div class="test_name"><a href="#">Govind</a></div>
