--- a/index.html
+++ b/index.html
@@ -334,8 +334,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<div class="section_title_container">
-						<div class="section_subtitle"><span style="color:red">Etch</span>New 2020</div>
+					<div data-aos="fade-up" data-aos-delay="3s" class=" section_title_container">
+						<div  class=" section_subtitle"><span style="color:red">Etch</span>New 2020</div>
 						<div class="section_title">Spot Light</div>
 					</div>
 				</div>
@@ -343,7 +343,7 @@
 			<div class="row services_row">
 				
 				<!-- Service -->
-				<div class="col-xl-4 col-md-6 service_col">
+				<div data-aos="fade-right" data-aos-delay="3s"  class="col-xl-4 col-md-6 service_col">
 					<div class="service">
 						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
 							<div><div class="service_icon"><img src="images/icon_black.png" alt=""></div></div>
@@ -356,7 +356,7 @@
 				</div>
 
 				<!-- Service -->
-				<div class="col-xl-4 col-md-6 service_col">
+				<div data-aos="fade-up" data-aos-delay="3s" class="col-xl-4 col-md-6 service_col">
 					<div class="service">
 						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
 							<div><div class="service_icon"><img src="images/icon_black.png" alt=""></div></div>
@@ -369,7 +369,7 @@
 				</div>
 
 				<!-- Service -->
-				<div class="col-xl-4 col-md-6 service_col">
+				<div data-aos="fade-left" data-aos-delay="3s"  class="col-xl-4 col-md-6 service_col">
 					<div class="service">
 						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
 							<div><div class="service_icon"><img src="images/icon_black.png" alt=""></div></div>
@@ -379,10 +379,10 @@
 							<p>WIth a wide variey of experiment demonstrated infront of you this a perfect opportunity to observe and Learn</p>
 						</div>
 					</div>
-				</div>
+				</div data-aos="fade-right">
 
 				<!-- Service -->
-				<div class="col-xl-4 col-md-6 service_col">
+				<div  data-aos="fade-right" data-aos-delay="3s" class="col-xl-4 col-md-6 service_col">
 					<div class="service">
 						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
 							<div><div class="service_icon"><img src="images/icon_black.png" alt=""></div></div>
@@ -395,7 +395,7 @@
 				</div>
 
 				<!-- Service -->
-				<div class="col-xl-4 col-md-6 service_col">
+				<div data-aos="fade-up" data-aos-delay="3s"  class="col-xl-4 col-md-6 service_col">
 					<div class="service">
 						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
 							<div><div class="service_icon"><img src="images/icon_black.png" alt=""></div></div>
@@ -408,7 +408,7 @@
 				</div>
 
 				<!-- Service -->
-				<div class="col-xl-4 col-md-6 service_col">
+				<div  data-aos="fade-left" data-aos-delay="3s" class="col-xl-4 col-md-6 service_col">
 					<div class="service">
 						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
 							<div><div class="service_icon"><img src="images/icon_black.png" alt=""></div></div>
